[gd_scene load_steps=51 format=2]

[ext_resource path="res://Enemies/Minotauro/sprite_mino_last.png" type="Texture" id=1]
[ext_resource path="res://Shadows/LargeShadow.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Minotauro/Minotauro.gd" type="Script" id=3]
[ext_resource path="res://Hurt and Hitboxes/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://Hurt and Hitboxes/Hitbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=8]
[ext_resource path="res://Hurt and Hitboxes/SoftCollision.tscn" type="PackedScene" id=9]

[sub_resource type="CapsuleShape2D" id=1]
radius = 15.6262
height = 27.3663

[sub_resource type="CapsuleShape2D" id=2]
radius = 22.0476
height = 35.8494

[sub_resource type="CircleShape2D" id=3]
radius = 260.409

[sub_resource type="CapsuleShape2D" id=4]
radius = 21.2446
height = 40.5638

[sub_resource type="CircleShape2D" id=5]
radius = 31.2898

[sub_resource type="Animation" id=33]
resource_name = "AttackDown"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteToro:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}

[sub_resource type="Animation" id=34]
resource_name = "AttackLeft"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteToro:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "AttackRight"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteToro:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 30, 31 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}

[sub_resource type="Animation" id=35]
resource_name = "AttackUp"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteToro:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "Idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteToro:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=18]
resource_name = "IdleDown"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteToro:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=19]
resource_name = "IdleLeft"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteToro:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 16 ]
}

[sub_resource type="Animation" id=20]
resource_name = "IdleRight"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteToro:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[sub_resource type="Animation" id=21]
resource_name = "IdleUp"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteToro:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=22]
resource_name = "RunDown"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteToro:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=32]
resource_name = "RunLeft"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteToro:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19 ]
}

[sub_resource type="Animation" id=23]
resource_name = "RunRight"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteToro:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=24]
resource_name = "RunUp"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteToro:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=8]
resource_name = "WalkRight"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteToro:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 12, 13, 14 ]
}

[sub_resource type="Animation" id=36]
resource_name = "Win"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteToro:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 39 ]
}

[sub_resource type="AnimationNodeAnimation" id=37]
animation = "AttackLeft"

[sub_resource type="AnimationNodeAnimation" id=38]
animation = "AttackDown"

[sub_resource type="AnimationNodeAnimation" id=39]
animation = "AttackRight"

[sub_resource type="AnimationNodeAnimation" id=40]
animation = "AttackUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=25]
blend_point_0/node = SubResource( 37 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 38 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 39 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 40 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=41]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=42]
animation = "IdleDown"

[sub_resource type="AnimationNodeAnimation" id=43]
animation = "IdleRight"

[sub_resource type="AnimationNodeAnimation" id=44]
animation = "IdleUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=26]
blend_point_0/node = SubResource( 41 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 42 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 43 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 44 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=45]
animation = "RunLeft"

[sub_resource type="AnimationNodeAnimation" id=46]
animation = "RunDown"

[sub_resource type="AnimationNodeAnimation" id=47]
animation = "RunRight"

[sub_resource type="AnimationNodeAnimation" id=48]
animation = "RunUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=27]
blend_point_0/node = SubResource( 45 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 46 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 47 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 48 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachine" id=16]
states/Attack/node = SubResource( 25 )
states/Attack/position = Vector2( 425, 175 )
states/Idle/node = SubResource( 26 )
states/Idle/position = Vector2( 425, 56 )
states/Run/node = SubResource( 27 )
states/Run/position = Vector2( 594, 56 )
transitions = [ "Idle", "Attack", SubResource( 28 ), "Attack", "Idle", SubResource( 29 ), "Run", "Idle", SubResource( 30 ), "Idle", "Run", SubResource( 31 ) ]
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=17]

[node name="Minotauro" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 3 )

[node name="Node2D" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Node2D"]
position = Vector2( -0.420921, 7.71693 )
scale = Vector2( 2, 1.3 )
texture = ExtResource( 2 )

[node name="SpriteToro" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 0, -40 )
hframes = 44

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.187302, -1.68559 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -33.0005 )
shape = SubResource( 2 )

[node name="Stats" parent="." instance=ExtResource( 5 )]
max_health = 3

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 6 )]
visible = false

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 0.521569, 0, 1, 0.109804 )
shape = SubResource( 3 )

[node name="Hitbox" parent="." instance=ExtResource( 7 )]
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
modulate = Color( 0.886719, 0.072008, 0.0103912, 1 )
self_modulate = Color( 0.603922, 0.133333, 0.133333, 1 )
position = Vector2( 0.630676, -29.4314 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="SoftCollision" parent="." instance=ExtResource( 9 )]
visible = false

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( 0, -5.35143 )
shape = SubResource( 5 )

[node name="WanderController" parent="." instance=ExtResource( 8 )]
visible = false
wander_range = 50

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/AttackDown = SubResource( 33 )
anims/AttackLeft = SubResource( 34 )
anims/AttackRight = SubResource( 6 )
anims/AttackUp = SubResource( 35 )
anims/Idle = SubResource( 7 )
anims/IdleDown = SubResource( 18 )
anims/IdleLeft = SubResource( 19 )
anims/IdleRight = SubResource( 20 )
anims/IdleUp = SubResource( 21 )
anims/RunDown = SubResource( 22 )
anims/RunLeft = SubResource( 32 )
anims/RunRight = SubResource( 23 )
anims/RunUp = SubResource( 24 )
anims/WalkRight = SubResource( 8 )
anims/Win = SubResource( 36 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 16 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 17 )
parameters/Attack/blend_position = Vector2( 0, 1 )
parameters/Idle/blend_position = Vector2( 0, 1 )
parameters/Run/blend_position = Vector2( 0, 1 )
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="Hurtbox"]

[editable path="PlayerDetectionZone"]

[editable path="Hitbox"]

[editable path="SoftCollision"]
